<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_light"
        android:paddingHorizontal="16dp"
        tools:context=".presentation.teamdetails.basic.TeamDetailsBasicFragment">

        <TextView
            android:id="@+id/team_details_basic_position_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/team_details_basic_position_title"
            android:textColor="@color/white_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_details_basic_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_position_title"
            tools:text="Убегающий" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/white_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_position" />

        <TextView
            android:id="@+id/team_details_basic_format_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/team_details_basic_format_title"
            android:textColor="@color/white_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_position" />

        <TextView
            android:id="@+id/team_details_basic_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_format_title"
            tools:text="5x5" />

        <View
            android:id="@+id/team_details_basic_line_below_format"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/white_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_format" />

        <TextView
            android:id="@+id/team_details_basic_gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/team_details_basic_gender_title"
            android:textColor="@color/white_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/team_details_basic_gender_tournament_separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_format" />

        <TextView
            android:id="@+id/team_details_basic_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@id/team_details_basic_gender_tournament_separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_gender_title"
            tools:text="Мужской" />

        <View
            android:id="@+id/team_details_basic_gender_tournament_separator"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/white_light"
            app:layout_constraintBottom_toTopOf="@id/team_details_basic_line_below_tournament"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/team_details_basic_line_below_format" />

        <TextView
            android:id="@+id/team_details_basic_tournament_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/team_details_basic_tournament_title"
            android:textColor="@color/white_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/team_details_basic_gender_tournament_separator"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_format" />

        <TextView
            android:id="@+id/team_details_basic_tournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/team_details_basic_gender_tournament_separator"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_gender_title"
            tools:text="SYR" />

        <View
            android:id="@+id/team_details_basic_line_below_tournament"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/white_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_tournament" />

        <TextView
            android:id="@+id/team_details_basic_level_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/team_details_basic_level_title"
            android:textColor="@color/white_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_line_below_tournament" />

        <TextView
            android:id="@+id/team_details_basic_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_level_title"
            tools:text="Профессиональный" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/white_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_details_basic_level" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
